Colaboratory를 통해 생성됨

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -35,6 +35,7 @@
         "ga5pY8svnOBe",
         "2guexyh8GKt4"
       ],
+      "toc_visible": true,
       "machine_shape": "hm",
       "include_colab_link": true
     },
@@ -9358,8 +9359,7 @@
           }
         }
       }
-    },
-    "accelerator": "TPU"
+    }
   },
   "cells": [
     {
@@ -9473,7 +9473,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "acx7h0oITYOp",
-        "outputId": "33a7caaa-6ad7-40c2-df2e-02654d56e36b"
+        "outputId": "5d681d8c-4085-49f9-beb1-b097bfa199eb"
       },
       "source": [
         "from google.colab import drive\n",
@@ -9489,6 +9489,24 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xlmfVkHF1nIR"
+      },
+      "source": [
+        "model = AutoModelForSequenceClassification.from_pretrained(\"mrm8488/distilroberta-finetuned-tweets-hate-speech\", num_labels=2)\n",
+        "state_dict = torch.load('/content/drive/MyDrive/finalproject/roberta_ver2/E-1_VL-0.3701/pytorch_model.bin')\n",
+        "model.load_state_dict(state_dict)\n",
+        "\n",
+        "device = xm.xla_device()\n",
+        "model = model.to(device)\n",
+        "\n",
+        "xm.save(model.state_dict(), '/content/drive/MyDrive/finalproject/roberta_ver2/ds_ver2_rb_vl_0.3701.pth')"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -10902,7 +10920,7 @@
           "height": 402
         },
         "id": "O39b8j2ZwUJn",
-        "outputId": "233e85bf-0a54-4632-8091-67c10a417609"
+        "outputId": "18f1c20a-b5e4-4b06-e316-f9347be3c6b7"
       },
       "source": [
         "import pandas as pd\n",
@@ -11021,7 +11039,37 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Y696T0rWw7Q",
+        "outputId": "89284746-9b73-4bc7-9903-a71c971d1389"
+      },
+      "source": [
+        "ver2.target.value_counts()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0    154440\n",
+              "0.0    143162\n",
+              "Name: target, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
         }
       ]
     },
@@ -15462,369 +15510,6 @@
           "execution_count": 101
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dz22aAtHGQUB"
-      },
-      "source": [
-        "###RoBERTa_ver1"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ga5pY8svnOBe"
-      },
-      "source": [
-        "#### 1st epoch"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lZIniYxxCqQZ",
-        "outputId": "b503b383-0587-47af-d2aa-3a93aace01bd"
-      },
-      "source": [
-        "from keras.preprocessing.sequence import pad_sequences\n",
-        "\n",
-        "strat_time = time.time()\n",
-        "logits = test_sentences(['how do you think of gay [SEP] they are disgusting'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-starttime)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[-1.0101782  0.8590297]]\n",
-            "1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oSMGRh7jL8FO",
-        "outputId": "70f49390-7d28-427c-ad5a-fd0a4453a66b"
-      },
-      "source": [
-        "logits = test_sentences(['its too hot outside [SEP] take off your jacket'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-starttime)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[-1.0101942   0.85902035]]\n",
-            "1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "R84peQYMMCrr",
-        "outputId": "74fc808b-5395-4927-bd25-9c3401fe3f75"
-      },
-      "source": [
-        "logits = test_sentences(['hi im highschool student [SEP] hi take off your skirt for me'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-starttime)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[-1.0102001  0.8590086]]\n",
-            "1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "20zfAfiK0GF4",
-        "outputId": "57120424-6e05-49c5-998a-194a1682d206"
-      },
-      "source": [
-        "logits = test_sentences(['hi im highschool student'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-starttime)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[ 1.5494739 -1.1662635]]\n",
-            "0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "n1MhDzoz0I-6",
-        "outputId": "6b2098ad-e971-4bd4-8458-e90244ad16c0"
-      },
-      "source": [
-        "logits = test_sentences(['its too hot outside'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[-1.0101874   0.85902977]]\n",
-            "1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UARx8_ER0M76",
-        "outputId": "00f27f9e-1591-417d-c99d-241da92e9023"
-      },
-      "source": [
-        "logits = test_sentences(['take off your jacket'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-starttime)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[ 1.5494927 -1.1662406]]\n",
-            "0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2guexyh8GKt4"
-      },
-      "source": [
-        "#### latest model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SG7evaUzGKt_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "cd4bd281-b183-40c3-dbfa-388cad1f8799"
-      },
-      "source": [
-        "from keras.preprocessing.sequence import pad_sequences\n",
-        "\n",
-        "start_time = time.time()\n",
-        "logits = test_sentences(['how do you think of gay [SEP] they are disgusting'], 'roberta')\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-start_time)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[0.23070216 0.00121601]]\n",
-            "0\n",
-            "test took 0.025264739990234375\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "B82z_yX1niTY",
-        "outputId": "bae5ac75-e25f-4092-edb8-a804e36ec3e2"
-      },
-      "source": [
-        "start_time = time.time()\n",
-        "logits = test_sentences(['how do you think of gay'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-start_time)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[0.23069313 0.00120714]]\n",
-            "0\n",
-            "test took 0.026004552841186523\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_9dC6KAoGKuE",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "341349d3-59c2-4939-b40f-a94e2569de26"
-      },
-      "source": [
-        "start_time = time.time()\n",
-        "logits = test_sentences(['its too hot outside [SEP] take off your jacket'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-start_time)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[0.23070578 0.00121945]]\n",
-            "0\n",
-            "test took 0.02740001678466797\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wCpl9Q5PGKuF",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "32542c29-44cc-4df0-d53a-37a5506107a0"
-      },
-      "source": [
-        "start_time = time.time()\n",
-        "logits = test_sentences(['hi im highschool student [SEP] hi take off your skirt for me'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-start_time)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[0.2307066  0.00122229]]\n",
-            "0\n",
-            "test took 0.02689194679260254\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2rgy4CaWGKuG"
-      },
-      "source": [
-        "logits = test_sentences(['hi im highschool student'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-starttime)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IuIRrGfpGKuI"
-      },
-      "source": [
-        "logits = test_sentences(['its too hot outside'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "heBZtTjSGKuJ"
-      },
-      "source": [
-        "logits = test_sentences(['take off your jacket'])\n",
-        "\n",
-        "print(logits)\n",
-        "print(np.argmax(logits))\n",
-        "print('test took', time.time()-starttime)"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
